[gd_scene load_steps=47 format=3 uid="uid://l71jwitxm1wy"]

[ext_resource type="Script" path="res://Script/Enemy/Boss/Crab_king/crab_king.gd" id="1_1ye5w"]
[ext_resource type="Texture2D" uid="uid://fma2ust5f8pj" path="res://Art/Enemy/Crab/idle.png" id="1_dmn6f"]
[ext_resource type="Material" uid="uid://cmv24i1lrmfiw" path="res://Shader/enemy.tres" id="2_fb38v"]
[ext_resource type="Script" path="res://Script/Enemy/State/enemy_state_machine.gd" id="3_otexl"]
[ext_resource type="Script" path="res://Script/Enemy/Boss/Crab_king/State/idle.gd" id="4_8c1ba"]
[ext_resource type="Texture2D" uid="uid://do3kllmmiiw65" path="res://Art/Enemy/Crab/move.png" id="4_sqsm8"]
[ext_resource type="Script" path="res://Script/CombatComponent/attack_box.gd" id="4_w2ct0"]
[ext_resource type="Script" path="res://Script/CombatComponent/damage_data.gd" id="5_du16u"]
[ext_resource type="Texture2D" uid="uid://cofmqfxowtqvi" path="res://Art/Enemy/Crab/attack.png" id="5_m2s78"]
[ext_resource type="Script" path="res://Script/CombatComponent/hurt_box.gd" id="6_68gpk"]
[ext_resource type="Script" path="res://Script/Enemy/Boss/Crab_king/State/dead.gd" id="6_cl2eg"]
[ext_resource type="Texture2D" uid="uid://dbffa3d86qrba" path="res://Art/Effect/Tex_random.png" id="7_uo416"]
[ext_resource type="Texture2D" uid="uid://mrdy362tqpjr" path="res://Art/Effect/slash_1.png" id="8_mx1x2"]
[ext_resource type="PackedScene" uid="uid://bkijr6cnrf2dy" path="res://Scenes/Effect/dead_particle.tscn" id="9_el3hi"]
[ext_resource type="Script" path="res://Script/Enemy/Boss/Crab_king/State/move_to.gd" id="9_socow"]
[ext_resource type="Script" path="res://Script/Enemy/Boss/Crab_king/State/attack.gd" id="10_f5h08"]
[ext_resource type="Texture2D" uid="uid://byku3155bejsl" path="res://Art/Effect/hollow fade circle.png" id="10_hh6qp"]
[ext_resource type="Script" path="res://Script/Enemy/Boss/Crab_king/State/sleep.gd" id="11_4q2wn"]
[ext_resource type="AudioStream" uid="uid://cg34kv7j6hqy5" path="res://Audio/HitSound/face_hit_small_78.wav" id="11_bvytu"]
[ext_resource type="AudioStream" uid="uid://dgcehrixe8dlp" path="res://Audio/HitSound/body_hit_finisher_23.wav" id="12_sbawq"]

[sub_resource type="Animation" id="Animation_v3t7g"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_dmn6f")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_06pbn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_dmn6f")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-192, -192)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AttackBox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_tgkb6"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_dmn6f")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_bst4g"]
resource_name = "move"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_sqsm8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ob2wf"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_m2s78")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.4, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-192, -192)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AttackBox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3gihg"]
_data = {
"RESET": SubResource("Animation_06pbn"),
"attack": SubResource("Animation_ob2wf"),
"dead": SubResource("Animation_tgkb6"),
"idle": SubResource("Animation_v3t7g"),
"move": SubResource("Animation_bst4g")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xr6b7"]
radius = 56.0
height = 288.0

[sub_resource type="Resource" id="Resource_g3fic"]
script = ExtResource("5_du16u")
damage = 1.0
impact = 0.0
knockback = 400.0
sender_position = Vector2(0, 0)
take_damage_rule = 0
take_damage_mask = 0
element = 0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e11mm"]
size = Vector2(376, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bupt0"]
size = Vector2(256, 128)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_2wlcm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sl6oe"]
atlas = ExtResource("7_uo416")
region = Rect2(40.1037, 196.189, 117.956, 113.449)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_qxfv0"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 4
particles_anim_loop = true

[sub_resource type="Gradient" id="Gradient_p8c8h"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_80i21"]
gradient = SubResource("Gradient_p8c8h")

[sub_resource type="Curve" id="Curve_cvd14"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.649457, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.936842), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_4wyov"]
curve = SubResource("Curve_cvd14")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_s5lci"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 0.5
scale_curve = SubResource("CurveTexture_4wyov")
color_ramp = SubResource("GradientTexture1D_80i21")
sub_emitter_mode = 2
sub_emitter_amount_at_end = 20

[sub_resource type="Gradient" id="Gradient_ychi6"]
offsets = PackedFloat32Array(0, 0.916914, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.197937, 0.197937, 0.197937, 1, 0.0705882, 0.0705882, 0.0705882, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1a63i"]
gradient = SubResource("Gradient_ychi6")

[sub_resource type="Curve" id="Curve_mf6xj"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.389474), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_fy66m"]
curve = SubResource("Curve_mf6xj")

[sub_resource type="Curve" id="Curve_o7l8g"]
max_value = 1024.0
_data = [Vector2(0, 1024), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_rveq2"]
curve = SubResource("Curve_o7l8g")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3ksdg"]
lifetime_randomness = 0.4
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(50, 1, 1)
direction = Vector3(0, -1, 0)
initial_velocity_min = 110.24
initial_velocity_max = 365.35
velocity_limit_curve = SubResource("CurveTexture_rveq2")
gravity = Vector3(0, 500, 0)
linear_accel_max = 100.0
scale_min = 0.01
scale_max = 0.3
scale_curve = SubResource("CurveTexture_fy66m")
color = Color(0.466667, 0.560784, 0.639216, 1)
color_ramp = SubResource("GradientTexture1D_1a63i")

[sub_resource type="AtlasTexture" id="AtlasTexture_pwxqe"]
atlas = ExtResource("7_uo416")
region = Rect2(41.5117, 196.086, 115.429, 114.746)

[node name="Crab_king" type="CharacterBody2D" node_paths=PackedStringArray("ray")]
collision_layer = 0
script = ExtResource("1_1ye5w")
ray = NodePath("PlayerDetect")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
material = ExtResource("2_fb38v")
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_dmn6f")
offset = Vector2(-192, -192)
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3gihg")
}
autoplay = "idle"

[node name="GroundCollision" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_xr6b7")

[node name="EnemyStateMachine" type="Node" parent="." node_paths=PackedStringArray("InitialState")]
script = ExtResource("3_otexl")
InitialState = NodePath("sleep")

[node name="sleep" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("animator", "agent")]
script = ExtResource("11_4q2wn")
animator = NodePath("../../AnimationPlayer")
agent = NodePath("../..")

[node name="idle" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("animator", "agent")]
script = ExtResource("4_8c1ba")
animator = NodePath("../../AnimationPlayer")
agent = NodePath("../..")

[node name="move_to" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("animator", "agent")]
script = ExtResource("9_socow")
animator = NodePath("../../AnimationPlayer")
agent = NodePath("../..")

[node name="attack" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("animator", "agent")]
script = ExtResource("10_f5h08")
animator = NodePath("../../AnimationPlayer")
agent = NodePath("../..")

[node name="dead" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("animator", "agent")]
script = ExtResource("6_cl2eg")
animator = NodePath("../../AnimationPlayer")
agent = NodePath("../..")

[node name="AttackBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("4_w2ct0")
damage_data = SubResource("Resource_g3fic")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox"]
position = Vector2(-316, 0)
shape = SubResource("RectangleShape2D_e11mm")
disabled = true
debug_color = Color(0.905882, 0.239216, 0.478431, 0.419608)

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 10
script = ExtResource("6_68gpk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("RectangleShape2D_bupt0")
debug_color = Color(0.360784, 0.607843, 0.345098, 0.419608)

[node name="Particle" type="Node2D" parent="."]

[node name="HitEffect" type="CPUParticles2D" parent="Particle"]
material = SubResource("CanvasItemMaterial_2wlcm")
emitting = false
lifetime = 0.5
one_shot = true
preprocess = 0.03
explosiveness = 0.73
randomness = 0.79
local_coords = true
texture = SubResource("AtlasTexture_sl6oe")
emission_shape = 3
emission_rect_extents = Vector2(50, 50)
gravity = Vector2(0, 0)
initial_velocity_min = 185.0
initial_velocity_max = 1000.0
damping_min = 9.0
damping_max = 9.0
scale_amount_min = 0.01
scale_amount_max = 0.3

[node name="SlashEffect" type="CPUParticles2D" parent="Particle"]
material = SubResource("CanvasItemMaterial_qxfv0")
rotation = 0.565487
emitting = false
amount = 1
lifetime = 0.3
one_shot = true
local_coords = true
draw_order = 1
texture = ExtResource("8_mx1x2")
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
scale_amount_min = 0.5
scale_amount_max = 0.7
anim_speed_min = 1.0
anim_speed_max = 1.0

[node name="DeadParticle" parent="Particle" instance=ExtResource("9_el3hi")]

[node name="Pulse" type="GPUParticles2D" parent="Particle"]
emitting = false
amount = 1
sub_emitter = NodePath("Dust")
process_material = SubResource("ParticleProcessMaterial_s5lci")
texture = ExtResource("10_hh6qp")
lifetime = 0.3
one_shot = true

[node name="Dust" type="GPUParticles2D" parent="Particle/Pulse"]
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_3ksdg")
texture = SubResource("AtlasTexture_pwxqe")
one_shot = true
explosiveness = 0.76
randomness = 0.26

[node name="Audio" type="Node2D" parent="."]

[node name="HitSound" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("11_bvytu")
bus = &"Effect"

[node name="DeadSound" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("12_sbawq")
bus = &"Effect"

[node name="PlayerDetect" type="RayCast2D" parent="."]
target_position = Vector2(-500, 0)
collision_mask = 16
